--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <string name="title_activity_single_article">Article</string>
 
     <string name="hello_world">Hello world!</string>
+
+    <string name="author">Author</string>
+    <string name="comments">Comments</string>
+    <string name="published">xx/xx/xx</string>
+    <string name="content">Content</string>
 </resources>
