--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="comments">Comments</string>
     <string name="published">xx/xx/xx</string>
     <string name="content">Content</string>
+    <string name="title_activity_comment">CommentActivity</string>
 </resources>
