--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,8 @@
     <string name="login_error">Login Failed.</string>
     <string name="title_activity_dashboard">DashboardActivity</string>
     <!-- Dashboard -->
-    <string name="welcome_msg">Hello %1$s, how are you today?</string>
+
+    <string name="welcome_msg">Welcome</string>
     <string name="title_activity_single_article">Article</string>
 
     <string name="hello_world">Hello world!</string>
@@ -27,5 +28,19 @@
     <string name="title_activity_comment_post">CommentPost</string>
 
     <string name="post_comment">Post comment</string>
+
+    <!-- Login -->
+    <string name="title_activity_login">Login</string>
+    <string name="action_connect">Login</string>
+    <string name="login">Login</string>
+    <string name="cancel">Cancel</string>
+    <string name="username_hint">Type your username</string>
+    <string name="password_hint">Type your password</string>
+
+
+    <!-- Facebook -->
+    <string name="facebook_app_id">1516538831999478</string>
+
+
 
 </resources>
